# quick_fetcher

./: Cargo.toml  rustfmt.toml
src/: downloader.rs  error.rs  lib.rs
src/downloader/: decompress.rs  threads.rs  verify.rs
