[package]
name = "quick_fetcher"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "Asynchronous HTTP file downloader with support for concurrency"

[dependencies]
tokio = { version = "1.38.0", features = ["fs"] }
futures = "0.3.30"
indicatif = { version = "0.17.8", optional = true }
once_cell = "1.19.0"
reqwest = { version = "0.12.4", features = ["stream"] }
md-5 = { version = "0.10.6", optional = true }
sha1 = { version = "0.10.6", optional = true }
sha2 = { version = "0.10.8", optional = true }
thiserror = "1.0.61"
log = "0.4.21"
reqwest-retry = "0.5.0"
reqwest-middleware = "0.3.1"

[features]
default = ["render_progress", "verification"]
render_progress = ["indicatif"]
verification = ["md-5", "sha1", "sha2"]
